# ottoneu-lineup

./: .gitignore  README.md  constants.py  pyproject.toml
ottoneu_lineup/: ottoneu_lineup.py
tests/: test_ottoneu_lineup.py
