[tool.poetry]
name = "ottoneu-lineup"
version = "0.1.0"
description = ""
authors = ["Randy Akerman"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pandas = "^1.4.3"
lxml = "^4.9.1"
html5lib = "^1.1"
bs4 = "^0.0.1"
requests = "^2.28.1"
selenium = "^4.4.0"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
